Fix warnings on FileSystemService